app/styles/components/resume.css
.profile-image {
	border-radius: 50%;
	height: inherit;
	padding: 1.5rem;
	display: block;
	margin-inline: auto;
}

.candidate-information {
	--candidate-max-width: 85rem;
	--candidate-background: hsla(0, 0%, 0%, 0.2);
	--candidate-padding: var(--resume-padding);
	max-width: var(--candidate-max-width);
	background-color: var(--candidate-background);
	padding: var(--candidate-padding);
	width: fit-content;
	margin-inline: auto;
	border-radius: 0.5rem;
	inset: 0;
}

.candidate-summary {
	flex-shrink: 0;
}

.resume {
	--resume-padding: clamp(3rem, calc(1.5rem + 5vmin), 1.5rem);
	--resume-background: transparent;
	--resume-margin: 5vmin;
	padding: var(--resume-padding);
	background-color: var(--resume-background);
}

@media screen and (min-width: 92em) {
	.resume {
		display: flex;
		gap: 1.5rem;
	}
	.candidate-information {
		position: sticky;
		top: 1rem;
	}
	.resume-details section {
		padding-inline: 4rem;
	}
}

.resume-headline {
	text-align: center;
	display: flex;
	flex-direction: column;
}

.candidate-meta {
	order: -1;
}

.name {
	font-weight: bold;
}

.name + .resume-tagline {
	margin-block-start: 1em;
}

.experience-tagline {
	text-align: center;
}

#experience {
	margin-block-start: 1.25rem;
}

.experience {
	display: grid;
	grid-template-columns: minmax(min-content, 7rem) 1fr;
	gap: 1.5rem;
	align-items: center;
}

.experience meter {
	display: inline-block;
	vertical-align: middle;
}

.social-media {
	margin-block-start: 3rem;
}

.social-media .social-links {
	justify-content: space-between;
}

.resume-details-section-title {
	margin-block-end: 2rem;
	font-weight: bold;
}

.resume-details {
	display: flex;
	flex-wrap: wrap;
}

.engagements-container {
	flex: 0.5;
}

.resume-details section {
	padding-block: 3rem;
}

.work-history-container {
	flex: 1;
	margin-inline: clamp(1rem, 4rem, calc(1vw + 0.5rem));
}

.nationality {
	display: inline-block;
}

.candidate-nationalities {
	display: flex;
	gap: 1rem;
	justify-content: flex-end;
}

.candidate-experience-heading {
	font-size: 2.1rem;
	font-weight: bold;
	margin-block-end: 0.7rem;
	letter-spacing: 0.02em;
}

.institution-name, .graduation-year {
	font-weight: bold;
}

.education-meta {
	display: flex;
	gap: 1.5rem;
	align-items: center;
}

.education-meta sup {
	font-size: 0.75em;
	vertical-align: top;
}

.degree-meta {
	display: flex;
	gap: 1rem;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
	font-size: 0.85em;
}

.resume .project {
	--media-min-width: 30rem;
	--media-max-width: 50rem;
}

.resume .project-title-container {
	justify-content: space-between;
}

